2.0-alpha6

* Add enquiry issue type

* Improve interface speed and offline support
* Log changes made to issue estimates


2.0-alpha5

* Update IRC bot to latest for flood prevention

* Fix email notifications to gmail
* Correct precision of hours in milestone export
* Fix NPE in task render page

2.0-alpha4

* Added Windows support

* Fixed api doc generation for non root filesystems
* Fix updater to pull downloads from GitHub

2.0-alpha3

* Made availabile under the AGPL v3 License
* Better handling of 404 pages and typos in URLs
* Add API documentation generation with doxygen

* Fix issues with timezone in date/time pickers
