@@ -100,7 +100,12 @@
           <tr>
             <th class="description" colspan="2">Description</th>
           </tr><tr>
-            <td class="description" colspan="2"><textarea rows="8" cols="25" wicket:id="body"></textarea></td>
+            <td class="description" colspan="2"><textarea rows="16" cols="25" wicket:id="body"></textarea></td>
+          </tr>
+          <tr>
+            <th class="testnotes" colspan="2">Test Notes</th>
+          </tr><tr>
+            <td class="testnotes" colspan="2"><textarea rows="8" cols="25" wicket:id="testNotes"></textarea></td>
           </tr>
 
           <tr>
